gcc/testsuite/rust/rustc/ui/parser/keyword.rs
pub mod break {
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

